Overflow index page resolved

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -3,7 +3,16 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 0;
     margin: 0;
+    height: 100vh;
     overflow: hidden;
+}
+
+.wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    overflow: hidden; 
 }
 
 .cloud1,.cloud2,.cloud3,.sun{
